...
    <string name="audio_video_meeting_description">Meetings use Jitsi security and permission policies. All people currently in the room will see an invite to join while your meeting is happening.</string>
    <string name="cannot_call_yourself">You cannot place a call with yourself</string>
    <string name="cannot_call_yourself_with_invite">You cannot place a call with yourself, wait for participants to accept invitation</string>
    <string name="failed_to_add_widget">Failed to add widget</string>
    <string name="failed_to_remove_widget">Failed to remove widget</string>
    <string name="or">or</string>
    <string name="done">Done</string>

    <string name="call_notification_answer">Accept</string>
    <string name="call_notification_reject">Decline</string>
    <string name="call_notification_hangup">Hang Up</string>

    <!-- actions -->
...
    <string name="settings_sdk_version">Matrix SDK Version</string>
    <string name="settings_other_third_party_notices">Other third party notices</string>
    <string name="navigate_to_room_when_already_in_the_room">You are already viewing this room!</string>
    <string name="navigate_to_thread_when_already_in_the_thread">You are already viewing this thread!</string>

    <!-- Settings -->
    <string name="settings_general_title">General</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_security_and_privacy">Security &amp; Privacy</string>
    <string name="settings_push_rules">Push Rules</string>
    <string name="settings_push_rules_no_rules">No push rules defined</string>
    <string name="settings_push_gateway_no_pushers">No registered push gateways</string>

...
    <string name="verification_sent">Verification Sent</string>
    <string name="verification_request">Verification Request</string>
    <string name="verification_verify_device">Verify this session</string>

    <string name="verification_scan_notice">Scan the code with the other user\'s device to securely verify each other</string>
    <string name="verification_scan_self_notice">Scan the code with your other device or switch and scan with this device</string>
    <string name="verification_scan_their_code">Scan their code</string>
    <string name="verification_scan_with_this_device">Scan with this device</string>
    <string name="verification_scan_emoji_title">Can\'t scan</string>
    <string name="verification_scan_emoji_subtitle">If you\'re not in person, compare emoji instead</string>
    <string name="verification_scan_self_emoji_subtitle">Verify by comparing emoji instead</string>

    <string name="verification_no_scan_emoji_title">Verify by comparing emojis</string>

    <string name="verification_verify_user">Verify %s</string>
...
    <string name="verification_request_notice">To be secure, verify %s by checking a one-time code.</string>
    <string name="verification_request_start_notice">To be secure, do this in person or use another way to communicate.</string>

    <string name="verification_emoji_notice">Compare the unique emoji, ensuring they appear in the same order.</string>
    <string name="verification_code_notice">Compare the code with the one displayed on the other user\'s screen.</string>
    <string name="verification_conclusion_ok_notice">Messages with this user are end-to-end encrypted and can\'t be read by third parties.</string>
    <string name="verification_conclusion_ok_self_notice">Your new session is now verified. It has access to your encrypted messages, and other users will see it as trusted.</string>

    <string name="encryption_information_cross_signing_state">Cross-Signing</string>
    <string name="encryption_information_dg_xsigning_complete">Cross-Signing is enabled\nPrivate Keys on device.</string>
    <string name="encryption_information_dg_xsigning_trusted">Cross-Signing is enabled\nKeys are trusted.\nPrivate keys are not known</string>
    <string name="encryption_information_dg_xsigning_not_trusted">Cross-Signing is enabled.\nKeys are not trusted</string>
    <string name="encryption_information_dg_xsigning_disabled">Cross-Signing is not enabled</string>
...
    <plurals name="settings_active_sessions_count">
        <item quantity="one">%d active session</item>
        <item quantity="other">%d active sessions</item>
    </plurals>

    <string name="crosssigning_verify_this_session">Verify this device</string>
    <string name="crosssigning_cannot_verify_this_session">Unable to verify this device</string>
    <string name="crosssigning_cannot_verify_this_session_desc">You won’t be able to access encrypted message history. Reset your Secure Message Backup and verification keys to start fresh.</string>

    <string name="verification_open_other_to_verify">Use an existing session to verify this one, granting it access to encrypted messages.</string>

    <string name="verification_profile_verify">Verify</string>
    <string name="verification_profile_verified">Verified</string>
...
    <string name="no_connectivity_to_the_server_indicator_airplane">Airplane mode is on</string>

    <string name="settings_dev_tools">Dev Tools</string>
    <string name="settings_account_data">Account Data</string>
    <string name="delete_account_data_warning">Delete the account data of type %1$s?\n\nUse with caution, it may lead to unexpected behavior.</string>

    <string name="verification_cannot_access_other_session">Use a Recovery Passphrase or Key</string>
    <string name="verification_use_passphrase">If you can’t access an existing session</string>

    <string name="enter_secret_storage_invalid">Cannot find secrets in storage</string>

    <string name="message_action_item_redact">Remove…</string>
    <string name="share_confirm_room">Do you want to send this attachment to %1$s?</string>
...
    <!-- Note to translators: the translation MUST contain the string "${app_name}", which will be replaced by the application name -->
    <string name="app_desktop_web">${app_name} Web\n${app_name} Desktop</string>
    <!-- Note to translators: the translation MUST contain the string "${app_name}", which will be replaced by the application name -->
    <string name="app_ios_android">${app_name} iOS\n${app_name} Android</string>
    <string name="or_other_mx_capable_client">or another cross-signing capable Matrix client</string>
    <!-- Note to translators: the translation MUST contain the string "${app_name}", which will be replaced by the application name -->
    <string name="use_latest_app">Use the latest ${app_name} on your other devices:</string>
    <string name="command_description_discard_session">Forces the current outbound group session in an encrypted room to be discarded</string>
    <string name="command_description_discard_session_not_handled">Only supported in encrypted rooms</string>
    <!-- first will be replaced by recovery_passphrase, second will be replaced by recovery_key-->
    <string name="enter_secret_storage_passphrase_or_key">Use your %1$s or use your %2$s to continue.</string>
    <string name="use_recovery_key">Use Recovery Key</string>
    <string name="enter_secret_storage_input_key">Select your Recovery Key, or input it manually by typing it or pasting from your clipboard</string>
...
