...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/groupToolbarAvatarImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/groupToolbarTitleView"
...

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/roomListContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintTop_toBottomOf="@+id/groupToolbar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
