<?xml version="1.0" encoding="utf-8"?>
<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurface" />